[project]
name = "nomad-distribution"
description = "nomad distribution template"
version = "0.1"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "nomad-compass",
  "nomad-lab[parsing, infrastructure]>=1.3.10",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
nomad-lab = { workspace = true }
nomad-compass = { workspace = true }

[tool.uv]
extra-index-url = [
  "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple",
]
constraint-dependencies = ["hyperspy>=1.7.6"]
required-version = ">=0.5.14"

[dependency-groups]
dev = ["nomad-lab[parsing, infrastructure, dev]>=1.3.4", "poethepoet>=0.29.0"]

[tool.poe.tasks]
submodule = "git submodule update --init --recursive"
docker = "docker compose up -d"
setup = ["copy-chatbot-components", "gui-env", "gui-setup", "docker", "config"]
lint = ["ruff-lint", "ruff-format"]

[tool.poe.tasks.start]
cmd = "nomad admin run appworker --dev"
env = { NOMAD_SERVICES_MODE = "development" }

[tool.poe.tasks.cpuworker]
cmd = "nomad admin run action-cpu-worker"
env = { NOMAD_SERVICES_MODE = "development" }

[tool.poe.tasks.gpuworker]
cmd = "nomad admin run action-gpu-worker"
env = { NOMAD_SERVICES_MODE = "development" }

[tool.poe.tasks.config]
shell = """
import os;
if not os.path.exists("nomad.yaml"):
    with open("nomad.yaml", "w") as f:
        f.write("keycloak:\\n  realm_name: \\"fairdi_nomad_test\\"\\n")
"""
interpreter = "python"

[tool.poe.tasks.gui-env]
cmd = "python -W ignore -m nomad.cli dev gui-env"
capture_stdout = "packages/nomad-FAIR/gui/.env.development"

[tool.poe.tasks.docs]
cmd = "mkdocs serve"
cwd = "packages/nomad-docs"

[tool.poe.tasks.ruff-lint]
cmd = "ruff check ."

[tool.poe.tasks.ruff-format]
cmd = "ruff format . --check"

[tool.poe.tasks.hub]
cmd = "nomad admin run hub"
cwd = "packages/nomad-FAIR"

[tool.poe.tasks.gui]
cmd = "yarn run"
cwd = "packages/nomad-FAIR/gui"

[tool.poe.tasks.gui-setup]
cmd = "yarn"
cwd = "packages/nomad-FAIR/gui"

[tool.poe.tasks.gen-gui-test-env]
cmd = "python -W ignore -m nomad.cli dev gui-config"
capture_stdout = "packages/nomad-FAIR/gui/tests/env.js"
env = { NOMAD_CONFIG = "packages/nomad-FAIR/gui/tests/nomad.yaml" }

[tool.poe.tasks.gen-nomad-lock]
cmd = "uv pip compile -U --universal -p 3.11 --extra parsing --extra infrastructure --extra dev --annotation-style=line pyproject.toml requirements.txt"
capture_stdout = "packages/nomad-FAIR/requirements-dev.txt"
cwd = "packages/nomad-FAIR"
deps = ["gen-nomad-lock-without-dev"]

[tool.poe.tasks.gen-nomad-lock-without-dev]
cmd = "uv pip compile -U --universal -p 3.11 --extra parsing --extra infrastructure --annotation-style=line pyproject.toml"
cwd = "packages/nomad-FAIR"
capture_stdout = "packages/nomad-FAIR/requirements.txt"

[tool.poe.tasks.copy-chatbot-components]
shell = """
cp -f gui_chatbot_components/App.js packages/nomad-FAIR/gui/src/components/App.js
cp -f gui_chatbot_components/Chatbot.js packages/nomad-FAIR/gui/src/components/Chatbot.js
cp -f gui_chatbot_components/ChatbotWidget.jsx packages/nomad-FAIR/gui/src/components/ChatbotWidget.jsx
"""
